install(
    FILES
    KACL
    KAboutApplicationDialog
    KAboutData
    KAboutPerson
    KAcceleratorManager
    KAction
    KActionCategory
    KActionCollection
    KActionMenu
    KActionSelector
    KAnimatedButton
    KApplication
    KAr
    KArchive
    KArchiveDirectory
    KArchiveEntry
    KArchiveFile
    KAssistantDialog
    KAuthorized
    KAutoMount
    KAutoUnmount
    KAutoSaveFile
    KAutostart
    KBookmark
    KBookmarkAction
    KBookmarkActionInterface
    KBookmarkActionMenu
    KBookmarkDialog
    KBookmarkDomBuilder
    KBookmarkExporterBase
    KBookmarkGroup
    KBookmarkGroupTraverser
    KBookmarkImporterBase
    KBookmarkManager
    KBookmarkMenu
    KBookmarkOwner
    KBreadcrumbSelectionModel
    KBuildSycocaProgressDialog
    KButtonGroup
    KCapacityBar
    KCModule
    KCModuleContainer
    KCModuleInfo
    KCModuleLoader
    KCModuleProxy
    KCMultiDialog
    KIdleTime
    KCalendarSystem
    KCharMacroExpander
    KCharsets
    KCheckableProxyModel
    KCmdLineArgs
    KCmdLineOptions
    KCodecAction
    KColor
    KColorButton
    KColorCells
    KColorCollection
    KColorCombo
    KColorDialog
    KColorMimeData
    KColorPatch
    KColorScheme
    KColorTable
    KColorUtils
    KColorValueSelector
    KComboBox
    KCompletion
    KCompletionBase
    KCompletionBox
    KCompletionMatches
    KCompositeJob
    KConfig
    KConfigBase
    KConfigDialog
    KConfigDialogManager
    KConfigGroup
    KConfigSkeleton
    KConfigSkeletonGenericItem
    KConfigSkeletonItem
    KSharedConfigPtr
    KCrash
    KCurrencyCode
    KCursor
    KDBusServiceStarter
    KDebug
    KDEDModule
    KDEPrintDialog
    KDataTool
    KDataToolAction
    KDataToolInfo
    KDateComboBox
    KDatePicker
    KDateTable
    KDateTime
    KDateTimeEdit
    KDateTimeWidget
    KDateValidator
    KDateWidget
    KDesktopFile
    KDialog
    KDialogButtonBox
    KDialogJobUiDelegate
    KDirLister
    KDirModel
    KDirNotify
    KDirOperator
    KDirSortFilterProxyModel
    KDirSelectDialog
    KDirWatch
    KDualAction
    KFilePreviewGenerator
    KFilePlacesView
    KFileWidget
    KFileWritePlugin
    KDiskFreeSpaceInfo
    KDoubleNumInput
    KDoubleValidator
    KEMailSettings
    KEditListWidget
    KEditToolBar
    KEncodingFileDialog
    KExtendableItemDelegate
    KFadeWidgetEffect
    KFile
    KFileDialog
    KFileFilterCombo
    KFileItem
    KFileItemActions
    KFileItemList
    KFileItemListProperties
    KFileItemDelegate
    KFileMetaDataWidget
    KFileMetaInfo
    KFileMetaInfoGroup
    KFileMetaInfoItem
    KFilePlacesModel
    KFileTreeView
    KFilterBase
    KFilterDev
    KFind
    KFindDialog
    KFloatValidator
    KFontAction
    KFontChooser
    KFontComboBox
    KFontDialog
    KFontRequester
    KFontSizeAction
    KFontUtils
    KGlobal
    KGlobalAccel
    KGlobalSettings
    KGlobalShortcutInfo
    KGradientSelector
    KGuiItem
    KHBox
    KHelpMenu
    KHistoryComboBox
    KHueSaturationSelector
    KIEBookmarkExporterImpl
    KIEBookmarkImporter
    KIEBookmarkImporterImpl
    KIMProxy
    KIcon
    KIconButton
    KIconCanvas
    KIconDialog
    KIconEffect
    KIconLoader
    KIconTheme
    KIdentityProxyModel
    KImageFilePreview
    KImageIO
    KInputDialog
    KComponentData
    KIntNumInput
    KIntSpinBox
    KIntValidator
    KJob
    KJobTrackerInterface
    KJobUiDelegate
    KKeySequenceWidget
    KLanguageButton
    KLed
    KLineEdit
    KLinkItemSelectionModel
    KListWidget
    KListWidgetSearchLine
    KLocale
    KLocalizedDate
    KLocalizedString
    KLockFile
    KMacroExpanderBase
    KMainWindow
    KMenu
    KMessage
    KMessageBox
    KMessageBoxMessageHandler
    KMessageHandler
    KMessageWidget
    KMimeType
    KMimeTypeChooser
    KMimeTypeChooserDialog
    KMimeTypeTrader
    KModelIndexProxyMapper
    KMozillaBookmarkImporterImpl
    KModifierKeyInfo
    KMountPoint
    KMultiTabBar
    KMultiTabBarButton
    KMultiTabBarTab
    KNameAndUrlInputDialog
    KNFSShare
    KNSBookmarkExporter
    KNSBookmarkExporterImpl
    KNSBookmarkImporter
    KNSBookmarkImporterImpl
    KNTLM
    KNewFileMenu
    KNewPasswordDialog
    KNotification
    KNotificationRestrictions
    KNotifyConfigWidget
    KNumInput
    KOCRDialog
    KOpenWithDialog
    KOperaBookmarkExporterImpl
    KOperaBookmarkImporter
    KOperaBookmarkImporterImpl
    KPageDialog
    KPageModel
    KPageView
    KPageWidget
    KPageWidgetItem
    KPageWidgetModel
    KPassivePopup
    KPassivePopupMessageHandler
    KPasswordDialog
    KPasteTextAction
    KPixmapRegionSelectorDialog
    KPixmapRegionSelectorWidget
    KPlotAxis
    KPlotObject
    KPlotPoint
    KPlotWidget
    KPluginFactory
    KPluginInfo
    KPluginLoader
    KPluginSelector
    KPopupFrame
    KPreviewWidgetBase
    KPrintPreview
    KProcess
    KProgressDialog
    KPropertiesDialog
    KProtocolInfo
    KProtocolManager
    KPushButton
    KRandom
    KRandomSequence
    KRatingPainter
    KRatingWidget
    KRecentDocument
    KRecentFilesAction
    KRecursiveFilterProxyModel
    KRegExpEditorInterface
    KRemoteEncoding
    KReplace
    KReplaceDialog
    KRestrictedLine
    KRichTextEdit
    KRichTextWidget
    KRuler
    KRun
    KSambaShare
    KSambaShareData
    KSaveFile
    KScanDialog
    KSelectAction
    KSelectionOwner
    KSelectionWatcher
    KSelector
    KSeparator
    KService
    KServiceAction
    KServiceGroup
    KServiceType
    KServiceTypeTrader
    KSessionManager
    KSharedConfig
    KSharedPtr
    KShell
    KShellCompletion
    KShortcut
    KShortcutsDialog
    KShortcutsEditor
    KShortcutWidget
    KSortableItem
    KSortableList
    KSpeech
    KSplashScreen
    KSqueezedTextLabel
    KStandardDirs
    KStandardAction
    KStandardGuiItem
    KStandardShortcut
    KStartupInfo
    KStartupInfoData
    KStartupInfoId
    KStatusBar
    KStatusBarJobTracker
    KStatusNotifierItem
    KStringHandler
    KStyle
    KStyleFactory
    KSycoca
    KSycocaEntry
    KSystemEventFilter
    KSystemTimeZone
    KSystemTimeZoneSource
    KSystemTimeZones
    KSystemTrayIcon
    KTabBar
    KTabWidget
    KTar
    KTempDir
    KTemporaryFile
    KTextEdit
    KTimeComboBox
    KTimeZone
    KTimeZoneData
    KTimeZoneSource
    KTimeZoneWidget
    KTimeZones
    KTipDatabase
    KTipDialog
    KTitleWidget
    KToggleAction
    KToggleFullScreenAction
    KToggleToolBarAction
    KToolBar
    KToolBarLabelAction
    KToolBarPopupAction
    KToolBarSpacerAction
    KToolInvocation
    KTreeWidgetSearchLine
    KTreeWidgetSearchLineWidget
    KTzfileTimeZone
    KTzfileTimeZoneSource
    KUndoStack
    KUniqueApplication
    KUriFilter
    KUriFilterData
    KUriFilterPlugin
    KUrl
    KUrlComboBox
    KUrlComboRequester
    KUrlCompletion
    KUrlLabel
    KUrlNavigator
    KUrlRequester
    KUrlRequesterDialog
    KUser
    KUserGroup
    KVBox
    KViewStateMaintainer
    KViewStateSaver
    KWindowInfo
    KWindowSystem
    KWordMacroExpander
    KWordWrap
    KXBELBookmarkImporterImpl
    KXErrorHandler
    KXMLGUIBuilder
    KXMLGUIClient
    KXMLGUIFactory
    KXmlGuiWindow
    KXMessages
    KXYSelector
    KZip
    KZipFileEntry
    KonqBookmarkMenu
    KonqBookmarkOwner
    NET
    NETRootInfo
    NETWinInfo
    OrgKdeKDirNotifyInterface
    OrgKdeKLauncherInterface
    ThumbCreator
    kdbgstream
    kndbgstream
    KCategorizedView
    KCategoryDrawer
    KCategorizedSortFilterProxyModel
    KEmoticons
    KEmoticonsProvider
    KEmoticonsTheme
    KFilterProxySearchLine
    KWidgetItemDelegate
    KWidgetJobTracker
    KPixmapSequence
    KPixmapSequenceWidget
    KPixmapSequenceOverlayPainter
    KAudioPlayer
    KMediaPlayer
    KMediaWidget
    KPty
    KPtyDevice
    KPtyProcess
    DESTINATION ${KDE4_INCLUDE_INSTALL_DIR}/KDE
    COMPONENT Devel
)

install(
    FILES
    DNSSD/Configuration
    DNSSD/DomainBrowser
    DNSSD/DomainModel
    DNSSD/PublicService
    DNSSD/RemoteService
    DNSSD/ServiceBase
    DNSSD/ServiceBrowser
    DNSSD/ServiceModel
    DNSSD/ServiceTypeBrowser
    DESTINATION ${KDE4_INCLUDE_INSTALL_DIR}/KDE/DNSSD
    COMPONENT Devel
)

install(
    FILES
    KAccelGen/Deref
    KAccelGen/Deref_Key
    DESTINATION ${KDE4_INCLUDE_INSTALL_DIR}/KDE/KAccelGen
    COMPONENT Devel
)


install( FILES
    KHE/CharColumnInterface
    KHE/ClipboardInterface
    KHE/ValueColumnInterface
    KHE/ZoomInterface
    DESTINATION ${KDE4_INCLUDE_INSTALL_DIR}/KDE/KHE
    COMPONENT Devel
)


install(
    FILES
    KIO/AccessManager
    KIO/AuthInfo
    KIO/ChmodJob
    KIO/Connection
    KIO/CopyInfo
    KIO/CopyJob
    KIO/DavJob
    KIO/DeleteJob
    KIO/FileCopyJob
    KIO/FileJob
    KIO/ForwardingSlaveBase
    KIO/Job
    KIO/JobClasses
    KIO/JobUiDelegate
    KIO/ListJob
    KIO/MetaData
    KIO/MetaInfoJob
    KIO/MimetypeJob
    KIO/MultiGetJob
    KIO/NetAccess
    KIO/NetRC
    KIO/PreviewJob
    KIO/RenameDialog
    KIO/RenameDialogPlugin
    KIO/Scheduler
    KIO/SessionData
    KIO/SimpleJob
    KIO/SkipDialog
    KIO/Slave
    KIO/SlaveBase
    KIO/SlaveConfig
    KIO/SlaveInterface
    KIO/StatJob
    KIO/StoredTransferJob
    KIO/TCPSlaveBase
    KIO/Task
    KIO/TransferJob
    DESTINATION ${KDE4_INCLUDE_INSTALL_DIR}/KDE/KIO
    COMPONENT Devel
)

install(
    FILES
    KParts/BrowserExtension
    KParts/BrowserHostExtension
    KParts/BrowserInterface
    KParts/BrowserRun
    KParts/Event
    KParts/Factory
    KParts/FileInfoExtension
    KParts/GUIActivateEvent
    KParts/LiveConnectExtension
    KParts/ListingExtension
    KParts/MainWindow
    KParts/OpenUrlEvent
    KParts/Part
    KParts/PartActivateEvent
    KParts/PartBase
    KParts/PartManager
    KParts/PartSelectEvent
    KParts/Plugin
    KParts/ReadOnlyPart
    KParts/ReadWritePart
    KParts/StatusBarExtension
    KParts/WindowArgs
    DESTINATION ${KDE4_INCLUDE_INSTALL_DIR}/KDE/KParts
    COMPONENT Devel
)


install(
    FILES
    KSettings/Dialog
    KSettings/Dispatcher
    KSettings/PluginPage
    DESTINATION ${KDE4_INCLUDE_INSTALL_DIR}/KDE/KSettings
    COMPONENT Devel
)


#install(
#    FILES
#    Sonnet/GuessLanguage
#    Sonnet/UnicodeData
#    Sonnet/TextBreaks
#    Sonnet/Spell
#    DESTINATION ${KDE4_INCLUDE_INSTALL_DIR}/KDE/Sonnet
#    COMPONENT Devel
#)


install(
    FILES
    KTextEditor/Attribute
    KTextEditor/CodeCompletionInterface
    KTextEditor/CodeCompletionModel
    KTextEditor/CodeCompletionModelControllerInterface
    KTextEditor/Command
    KTextEditor/CommandExtension
    KTextEditor/CommandInterface
    KTextEditor/ConfigInterface
    KTextEditor/ConfigPage
    KTextEditor/ContainerInterface
    KTextEditor/Cursor
    KTextEditor/Document
    KTextEditor/Editor
    KTextEditor/EditorChooser
    KTextEditor/Factory
    KTextEditor/HighlightInterface
    KTextEditor/MarkInterface
    KTextEditor/ModificationInterface
    KTextEditor/MovingCursor
    KTextEditor/MovingInterface
    KTextEditor/MovingRange
    KTextEditor/ParameterizedSessionConfigInterface
    KTextEditor/Plugin
    KTextEditor/Range
    KTextEditor/SearchInterface
    KTextEditor/SessionConfigInterface
    KTextEditor/SmartCursor
    KTextEditor/SmartCursorNotifier
    KTextEditor/SmartCursorWatcher
    KTextEditor/SmartInterface
    KTextEditor/SmartRange
    KTextEditor/SmartRangeNotifier
    KTextEditor/SmartRangeWatcher
    KTextEditor/TemplateInterface
    KTextEditor/TemplateInterface2
    KTextEditor/TextHintInterface
    KTextEditor/VariableInterface
    KTextEditor/View
    DESTINATION ${KDE4_INCLUDE_INSTALL_DIR}/KDE/KTextEditor
    COMPONENT Devel
)


install(
    FILES
    KWallet/Wallet
    DESTINATION ${KDE4_INCLUDE_INSTALL_DIR}/KDE/KWallet
    COMPONENT Devel
)


install(
    FILES
    Solid/AcAdapter
    Solid/AudioInterface
    Solid/Battery
    Solid/Block
    Solid/Button
    Solid/Camera
    Solid/Device
    Solid/DeviceInterface
    Solid/DeviceNotifier
    Solid/DvbInterface
    Solid/GenericInterface
    Solid/NetworkInterface
    Solid/NetworkShare
    Solid/Networking
    Solid/OpticalDisc
    Solid/OpticalDrive
    Solid/PortableMediaPlayer
    Solid/PowerManagement
    Solid/Predicate
    Solid/Processor
    Solid/StorageAccess
    Solid/StorageDrive
    Solid/StorageVolume
    DESTINATION ${KDE4_INCLUDE_INSTALL_DIR}/KDE/Solid
    COMPONENT Devel
)


install(
    FILES
    Sonnet/ConfigDialog
    Sonnet/ConfigWidget
    Sonnet/Dialog
    Sonnet/DictionaryComboBox
    Sonnet/Highlighter
    DESTINATION ${KDE4_INCLUDE_INSTALL_DIR}/KDE/Sonnet
    COMPONENT Devel
)

install(
    FILES
    KAuth/Action
    KAuth/ActionReply
    KAuth/ActionWatcher
    KAuth/HelperSupport
    DESTINATION ${KDE4_INCLUDE_INSTALL_DIR}/KDE/KAuth
    COMPONENT Devel
)

install(
    FILES
    ThreadWeaver/DependencyPolicy
    ThreadWeaver/Job
    ThreadWeaver/JobCollection
    ThreadWeaver/JobSequence
    ThreadWeaver/QueuePolicy
    ThreadWeaver/ResourceRestrictionPolicy
    ThreadWeaver/State
    ThreadWeaver/Thread
    ThreadWeaver/Weaver
    ThreadWeaver/WeaverInterface
    ThreadWeaver/WeaverObserver
    DESTINATION ${KDE4_INCLUDE_INSTALL_DIR}/KDE/ThreadWeaver
    COMPONENT Devel
)

install(
    FILES
    Plasma/AbstractDialogManager
    Plasma/AbstractRunner
    Plasma/AbstractToolBox
    Plasma/Animation
    Plasma/Animator
    Plasma/Applet
    Plasma/AppletScript
    Plasma/BusyWidget
    Plasma/CheckBox
    Plasma/ComboBox
    Plasma/ConfigLoader
    Plasma/Containment
    Plasma/ContainmentActions
    Plasma/Corona
    Plasma/DataContainer
    Plasma/DataEngine
    Plasma/DataEngineManager
    Plasma/DataEngineScript
    Plasma/DeclarativeWidget
    Plasma/Delegate
    Plasma/Dialog
    Plasma/Extender
    Plasma/ExtenderGroup
    Plasma/ExtenderItem
    Plasma/FlashingLabel
    Plasma/Frame
    Plasma/FrameSvg
    Plasma/GroupBox
    Plasma/IconWidget
    Plasma/ItemBackground
    Plasma/Label
    Plasma/LineEdit
    Plasma/Meter
    Plasma/Package
    Plasma/PackageMetadata
    Plasma/PackageStructure
    Plasma/PaintUtils
    Plasma/Plasma
    Plasma/PluginLoader
    Plasma/PopupApplet
    Plasma/PushButton
    Plasma/QueryMatch
    Plasma/RadioButton
    Plasma/RunnerContext
    Plasma/RunnerManager
    Plasma/RunnerScript
    Plasma/ScriptEngine
    Plasma/ScrollBar
    Plasma/ScrollWidget
    Plasma/Separator
    Plasma/Service
    Plasma/ServiceJob
    Plasma/SignalPlotter
    Plasma/Slider
    Plasma/SpinBox
    Plasma/Svg
    Plasma/SvgWidget
    Plasma/TabBar
    Plasma/TextBrowser
    Plasma/TextEdit
    Plasma/Theme
    Plasma/ToolButton
    Plasma/ToolTipContent
    Plasma/ToolTipManager
    Plasma/TreeView
    Plasma/Version
    Plasma/View
    Plasma/Wallpaper
    Plasma/WallpaperScript
    Plasma/WindowEffects
    DESTINATION ${KDE4_INCLUDE_INSTALL_DIR}/KDE/Plasma
    COMPONENT Devel
)


install(
    FILES
    KUnitConversion/Converter
    KUnitConversion/Unit
    KUnitConversion/UnitCategory
    KUnitConversion/Value
    DESTINATION ${KDE4_INCLUDE_INSTALL_DIR}/KDE/KUnitConversion
    COMPONENT Devel
)
