install(
    FILES
    KACL
    KAboutApplicationDialog
    KAboutData
    KAboutPerson
    KAcceleratorManager
    KAction
    KActionCategory
    KActionCollection
    KActionMenu
    KActionSelector
    KApplication
    KAr
    KArchive
    KArchiveDirectory
    KArchiveEntry
    KArchiveFile
    KAssistantDialog
    KAuthorization
    KAutoMount
    KAutoUnmount
    KAutostart
    KBookmark
    KBookmarkAction
    KBookmarkActionInterface
    KBookmarkActionMenu
    KBookmarkDialog
    KBookmarkDomBuilder
    KBookmarkExporterBase
    KBookmarkGroup
    KBookmarkGroupTraverser
    KBookmarkImporterBase
    KBookmarkManager
    KBookmarkMenu
    KBookmarkOwner
    KBreadcrumbSelectionModel
    KBuildSycocaProgressDialog
    KButtonGroup
    KCapacityBar
    KCModule
    KCModuleContainer
    KCModuleInfo
    KCModuleLoader
    KCModuleProxy
    KCMultiDialog
    KIdleTime
    KExiv2
    KPasswdStore
    KHTTP
    KDNSSD
    KCalendarSystem
    KCharMacroExpander
    KCharsets
    KCheckableProxyModel
    KCmdLineArgs
    KCmdLineOptions
    KCodecAction
    KColor
    KColorButton
    KColorCells
    KColorCollection
    KColorCombo
    KColorDialog
    KColorMimeData
    KColorPatch
    KColorScheme
    KColorTable
    KColorUtils
    KColorValueSelector
    KComboBox
    KCompletion
    KCompletionBase
    KCompletionBox
    KCompletionMatches
    KCompositeJob
    KConfig
    KConfigBase
    KConfigDialog
    KConfigDialogManager
    KConfigGroup
    KConfigSkeleton
    KConfigSkeletonGenericItem
    KConfigSkeletonItem
    KSharedConfigPtr
    KCrash
    KCursor
    KDebug
    KDEDModule
    KDEPrintDialog
    KDateComboBox
    KDatePicker
    KDateTable
    KDateTime
    KDateTimeEdit
    KDateTimeWidget
    KDateValidator
    KDateWidget
    KDesktopFile
    KDialog
    KDialogButtonBox
    KDialogJobUiDelegate
    KDirLister
    KDirModel
    KDirNotify
    KDirOperator
    KDirSortFilterProxyModel
    KDirSelectDialog
    KDirWatch
    KDualAction
    KFilePreviewGenerator
    KFilePlacesView
    KFileWidget
    KDiskFreeSpaceInfo
    KDoubleNumInput
    KDoubleValidator
    KEMailSettings
    KEditListWidget
    KEditToolBar
    KEncodingFileDialog
    KExtendableItemDelegate
    KFadeWidgetEffect
    KFile
    KFileDialog
    KFileFilterCombo
    KFileItem
    KFileItemActions
    KFileItemList
    KFileItemListProperties
    KFileItemDelegate
    KFileMetaDataWidget
    KFileMetaInfo
    KFileMetaInfoItem
    KFilePlacesModel
    KFileTreeView
    KFilterBase
    KFilterDev
    KFind
    KFindDialog
    KFloatValidator
    KFontAction
    KFontChooser
    KFontComboBox
    KFontDialog
    KFontRequester
    KFontSizeAction
    KFontUtils
    KUnitConversion
    KGlobal
    KGlobalAccel
    KGlobalSettings
    KGlobalShortcutInfo
    KGradientSelector
    KGuiItem
    KHBox
    KHelpMenu
    KHistoryComboBox
    KHueSaturationSelector
    KIcon
    KIconButton
    KIconCanvas
    KIconDialog
    KIconEffect
    KIconLoader
    KIconTheme
    KIdentityProxyModel
    KImageFilePreview
    KImageIO
    KInputDialog
    KComponentData
    KIntNumInput
    KIntSpinBox
    KIntValidator
    KJob
    KJobTrackerInterface
    KJobUiDelegate
    KKeySequenceWidget
    KLanguageButton
    KLed
    KLineEdit
    KLinkItemSelectionModel
    KListWidget
    KListWidgetSearchLine
    KLocale
    KLocalizedDate
    KLocalizedString
    KLockFile
    KMacroExpanderBase
    KMainWindow
    KMenu
    KMessage
    KMessageBox
    KMessageBoxMessageHandler
    KMessageHandler
    KMessageWidget
    KMimeType
    KMimeTypeChooser
    KMimeTypeChooserDialog
    KMimeTypeTrader
    KModelIndexProxyMapper
    KModifierKeyInfo
    KMountPoint
    KMultiTabBar
    KMultiTabBarButton
    KMultiTabBarTab
    KNameAndUrlInputDialog
    KNewFileMenu
    KNewPasswordDialog
    KNotification
    KNotificationRestrictions
    KNotifyConfigWidget
    KNumInput
    KOpenWithDialog
    KPageDialog
    KPageModel
    KPageView
    KPageWidget
    KPageWidgetItem
    KPageWidgetModel
    KPassivePopup
    KPassivePopupMessageHandler
    KPasswordDialog
    KPasteTextAction
    KPixmapRegionSelectorDialog
    KPixmapRegionSelectorWidget
    KPluginFactory
    KPluginInfo
    KPluginLoader
    KPluginSelector
    KPopupFrame
    KPreviewWidgetBase
    KProcess
    KProgressDialog
    KPropertiesDialog
    KProtocolInfo
    KProtocolManager
    KPushButton
    KRandom
    KRatingPainter
    KRatingWidget
    KRecentDocument
    KRecentFilesAction
    KRecursiveFilterProxyModel
    KRegExpEditorInterface
    KRemoteEncoding
    KReplace
    KReplaceDialog
    KRestrictedLine
    KRichTextEdit
    KRichTextWidget
    KRuler
    KRun
    KSaveFile
    KSelectAction
    KSelectionOwner
    KSelectionWatcher
    KSelector
    KSeparator
    KService
    KServiceAction
    KServiceGroup
    KServiceType
    KServiceTypeTrader
    KSessionManager
    KSharedConfig
    KSharedPtr
    KShell
    KShortcut
    KShortcutsDialog
    KShortcutsEditor
    KShortcutWidget
    KSortableItem
    KSortableList
    KSpeech
    KSplashScreen
    KSqueezedTextLabel
    KStandardDirs
    KStandardAction
    KStandardGuiItem
    KStandardShortcut
    KStartupInfo
    KStartupInfoData
    KStartupInfoId
    KStatusBar
    KStatusBarJobTracker
    KStatusNotifierItem
    KStringHandler
    KStyle
    KSycoca
    KSycocaEntry
    KSystemEventFilter
    KSystemTimeZone
    KSystemTimeZoneSource
    KSystemTimeZones
    KSystemTrayIcon
    KTabBar
    KTabWidget
    KTar
    KTempDir
    KTemporaryFile
    KTextEdit
    KTimeComboBox
    KTimeZone
    KTimeZoneData
    KTimeZoneSource
    KTimeZoneWidget
    KTimeZones
    KTipDatabase
    KTipDialog
    KTitleWidget
    KToggleAction
    KToggleFullScreenAction
    KToggleToolBarAction
    KToolBar
    KToolBarLabelAction
    KToolBarPopupAction
    KToolBarSpacerAction
    KToolInvocation
    KTreeWidgetSearchLine
    KTreeWidgetSearchLineWidget
    KTzfileTimeZone
    KTzfileTimeZoneSource
    KUndoStack
    KUniqueApplication
    KUriFilter
    KUriFilterData
    KUriFilterPlugin
    KUrl
    KUrlComboBox
    KUrlComboRequester
    KUrlCompletion
    KUrlLabel
    KUrlNavigator
    KUrlRequester
    KUrlRequesterDialog
    KUser
    KUserGroup
    KVBox
    KWindowInfo
    KWindowSystem
    KWordMacroExpander
    KXBELBookmarkImporterImpl
    KXErrorHandler
    KXMLGUIBuilder
    KXMLGUIClient
    KXMLGUIFactory
    KXmlGuiWindow
    KXMessages
    KXYSelector
    KZip
    KZipFileEntry
    NET
    NETRootInfo
    NETWinInfo
    OrgKdeKDirNotifyInterface
    OrgKdeKLauncherInterface
    ThumbCreator
    kdbgstream
    kndbgstream
    KCategorizedView
    KCategoryDrawer
    KCategorizedSortFilterProxyModel
    KFilterProxySearchLine
    KWidgetItemDelegate
    KWidgetJobTracker
    KPixmapSequence
    KPixmapSequenceWidget
    KPixmapSequenceOverlayPainter
    KAudioPlayer
    KMediaPlayer
    KMediaWidget
    KPty
    KPtyDevice
    KPtyProcess
    DESTINATION ${KDE4_INCLUDE_INSTALL_DIR}/KDE
    COMPONENT Devel
)

install(
    FILES
    KAccelGen/Deref
    KAccelGen/Deref_Key
    DESTINATION ${KDE4_INCLUDE_INSTALL_DIR}/KDE/KAccelGen
    COMPONENT Devel
)

install(
    FILES
    KIO/AuthInfo
    KIO/ChmodJob
    KIO/Connection
    KIO/CopyInfo
    KIO/CopyJob
    KIO/DeleteJob
    KIO/FileCopyJob
    KIO/FileJob
    KIO/ForwardingSlaveBase
    KIO/Job
    KIO/JobClasses
    KIO/JobUiDelegate
    KIO/ListJob
    KIO/MetaData
    KIO/MimetypeJob
    KIO/NetAccess
    KIO/NetRC
    KIO/PreviewJob
    KIO/RenameDialog
    KIO/Scheduler
    KIO/SimpleJob
    KIO/SkipDialog
    KIO/Slave
    KIO/SlaveBase
    KIO/SlaveConfig
    KIO/SlaveInterface
    KIO/StatJob
    KIO/StoredTransferJob
    KIO/Task
    KIO/TransferJob
    DESTINATION ${KDE4_INCLUDE_INSTALL_DIR}/KDE/KIO
    COMPONENT Devel
)

install(
    FILES
    KParts/BrowserExtension
    KParts/Event
    KParts/Factory
    KParts/GUIActivateEvent
    KParts/MainWindow
    KParts/OpenUrlEvent
    KParts/Part
    KParts/PartActivateEvent
    KParts/PartBase
    KParts/PartManager
    KParts/PartSelectEvent
    KParts/ReadOnlyPart
    KParts/ReadWritePart
    KParts/StatusBarExtension
    DESTINATION ${KDE4_INCLUDE_INSTALL_DIR}/KDE/KParts
    COMPONENT Devel
)


install(
    FILES
    KSettings/Dialog
    KSettings/Dispatcher
    KSettings/PluginPage
    DESTINATION ${KDE4_INCLUDE_INSTALL_DIR}/KDE/KSettings
    COMPONENT Devel
)


#install(
#    FILES
#    Sonnet/GuessLanguage
#    Sonnet/UnicodeData
#    Sonnet/TextBreaks
#    Sonnet/Spell
#    DESTINATION ${KDE4_INCLUDE_INSTALL_DIR}/KDE/Sonnet
#    COMPONENT Devel
#)


install(
    FILES
    KTextEditor/Attribute
    KTextEditor/CodeCompletionInterface
    KTextEditor/CodeCompletionModel
    KTextEditor/CodeCompletionModelControllerInterface
    KTextEditor/Command
    KTextEditor/CommandExtension
    KTextEditor/CommandInterface
    KTextEditor/ConfigInterface
    KTextEditor/ConfigPage
    KTextEditor/ContainerInterface
    KTextEditor/Cursor
    KTextEditor/Document
    KTextEditor/Editor
    KTextEditor/EditorChooser
    KTextEditor/Factory
    KTextEditor/HighlightInterface
    KTextEditor/MarkInterface
    KTextEditor/ModificationInterface
    KTextEditor/MovingCursor
    KTextEditor/MovingInterface
    KTextEditor/MovingRange
    KTextEditor/ParameterizedSessionConfigInterface
    KTextEditor/Plugin
    KTextEditor/Range
    KTextEditor/SearchInterface
    KTextEditor/SessionConfigInterface
    KTextEditor/SmartCursor
    KTextEditor/SmartCursorNotifier
    KTextEditor/SmartCursorWatcher
    KTextEditor/SmartInterface
    KTextEditor/SmartRange
    KTextEditor/SmartRangeNotifier
    KTextEditor/SmartRangeWatcher
    KTextEditor/TemplateInterface
    KTextEditor/TextHintInterface
    KTextEditor/VariableInterface
    KTextEditor/View
    DESTINATION ${KDE4_INCLUDE_INSTALL_DIR}/KDE/KTextEditor
    COMPONENT Devel
)


install(
    FILES
    Solid/AcAdapter
    Solid/AudioInterface
    Solid/Battery
    Solid/Block
    Solid/Button
    Solid/Camera
    Solid/Device
    Solid/DeviceInterface
    Solid/DeviceNotifier
    Solid/GenericInterface
    Solid/NetworkInterface
    Solid/Networking
    Solid/OpticalDisc
    Solid/OpticalDrive
    Solid/PortableMediaPlayer
    Solid/PowerManagement
    Solid/Predicate
    Solid/Processor
    Solid/StorageAccess
    Solid/StorageDrive
    Solid/StorageVolume
    Solid/Graphic
    DESTINATION ${KDE4_INCLUDE_INSTALL_DIR}/KDE/Solid
    COMPONENT Devel
)


install(
    FILES
    Sonnet/ConfigDialog
    Sonnet/ConfigWidget
    Sonnet/Dialog
    Sonnet/DictionaryComboBox
    Sonnet/Highlighter
    DESTINATION ${KDE4_INCLUDE_INSTALL_DIR}/KDE/Sonnet
    COMPONENT Devel
)

install(
    FILES
    Plasma/AbstractDialogManager
    Plasma/AbstractRunner
    Plasma/AbstractToolBox
    Plasma/Animation
    Plasma/Animator
    Plasma/Applet
    Plasma/AppletScript
    Plasma/BusyWidget
    Plasma/CheckBox
    Plasma/ComboBox
    Plasma/ConfigLoader
    Plasma/Containment
    Plasma/ContainmentActions
    Plasma/Corona
    Plasma/DataContainer
    Plasma/DataEngine
    Plasma/DataEngineManager
    Plasma/DeclarativeWidget
    Plasma/Delegate
    Plasma/Dialog
    Plasma/Extender
    Plasma/ExtenderGroup
    Plasma/ExtenderItem
    Plasma/FlashingLabel
    Plasma/Frame
    Plasma/FrameSvg
    Plasma/GroupBox
    Plasma/IconWidget
    Plasma/ItemBackground
    Plasma/Label
    Plasma/LineEdit
    Plasma/Meter
    Plasma/Package
    Plasma/PackageMetadata
    Plasma/PackageStructure
    Plasma/PaintUtils
    Plasma/Plasma
    Plasma/PluginLoader
    Plasma/PopupApplet
    Plasma/PushButton
    Plasma/QueryMatch
    Plasma/RadioButton
    Plasma/RunnerContext
    Plasma/RunnerManager
    Plasma/ScriptEngine
    Plasma/ScrollBar
    Plasma/ScrollWidget
    Plasma/Separator
    Plasma/Service
    Plasma/ServiceJob
    Plasma/SignalPlotter
    Plasma/Slider
    Plasma/SpinBox
    Plasma/Svg
    Plasma/SvgWidget
    Plasma/TabBar
    Plasma/TextBrowser
    Plasma/TextEdit
    Plasma/Theme
    Plasma/ToolButton
    Plasma/ToolTipContent
    Plasma/ToolTipManager
    Plasma/TreeView
    Plasma/Version
    Plasma/View
    Plasma/Wallpaper
    Plasma/WindowEffects
    DESTINATION ${KDE4_INCLUDE_INSTALL_DIR}/KDE/Plasma
    COMPONENT Devel
)
